--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "postcss": "^8",
