--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "framer-motion": "^11.5.6",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "next": "14.2.12",
     "react": "^18.3.1",
     "react-dom": "^18",
