--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://tech2:anWJyD6JHbulzPTL@cluster0.mus6u.mongodb.net/ContactForm?retryWrites=true&w=majority&appName=Cluster0
+EMAIL_USER=ssrajgurutech@gmail.com
+EMAIL_PASS=ptsf cbuu onmf smph
