--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "next": "14.2.12",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
